--- a/static/style.css
+++ b/static/style.css
@@ -45,19 +45,27 @@ footer {
     resize: both; /* Allow resizing both horizontally and vertically */
     overflow: auto; /* Handle overflow within the container */
     transition: width 0.3s ease, height 0.3s ease;
-    @media (max-width: 478px) {
+
+    @media screen and (max-width: 478px) {
         width: 100%;
-        height: 100%;
         bottom: 0;
         right: 0;
         border-radius: 0;
+        z-index: 1000;
+        resize: both;
+        overflow: auto;
+        margin-bottom: 10px;
     }
+
     @media screen and (max-width: 768px) {
         width: 478px;
         bottom: 0;
         right: 0;
         border-radius: 0;
-        
+        resize: both;
+        z-index: 1000;
+        overflow: auto;
+        margin-bottom: 10px;
     }
 }
 
@@ -97,7 +105,6 @@ footer {
 
         .chatbot-container.maximized {
             width: 90%;
-            height: 90%;
             bottom: 5%;
             right: 5%;
         }
@@ -136,7 +143,6 @@ footer {
 .chatbot-chat-box {
     height: 450px;
     overflow-y: scroll;
-    max-height: 400px;
     padding: 10px;
     margin-bottom: 10px; /* Ubah margin bottom agar naik ke atas sedikit */
 }
@@ -170,6 +176,10 @@ footer {
     border-radius: 5px;
     cursor: pointer;
     flex-shrink: 0; /* Tetapkan ukuran tombol tetap */
+}
+
+#chatbot-send-btn:hover {
+    background-color: #5E35B1;
 }
 
 .message-wrapper {
